# socialops-agent

./: .env.example  .gitignore  CAMERA_COMPARISON.md  CAMERA_QUICKSTART.md  CAMERA_REFACTOR_COMPLETE.md  CAMERA_REFACTOR_DOCS.md  CAMERA_SUMMARY.md  CHANGELOG.md  CHANGELOG_AR.md  CODE_QUALITY_REPORT.md  COLD_ROYAL_OBSIDIAN_DEMO.md  DEPLOY_GUIDE.md  DESIGN_COMPARISON.md  Dockerfile  ENTERPRISE_UPGRADE_SUMMARY.md  FIXES_SUMMARY.md  FULL_PROJECT_CONTEXT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.py  LIVEVISION_INTEGRATION.md  OAUTH_SETUP_GUIDE.md  QUICK_START_OAUTH.md  REACT_TAILWIND_REFERENCE.tsx  README.md  REFACTOR_SUMMARY.md  REGRESSION_FIX_REPORT.md  SECURITY_SETUP.md  SPRINT4_SUMMARY.md  SPRINT_A_VERIFICATION.md  STABILIZATION_REPORT.md  STREAMLIT_CLOUD_OAUTH.md  UI_ENHANCEMENTS_SUMMARY.md  VAULT_DASHBOARD_UPDATE.md  VISUAL_IDENTITY_UPDATE.md  commit_and_push.bat  commit_db_unify.bat  commit_dev_login.bat  commit_nav.bat  commit_rebrand.bat  commit_sprint2.bat  (+26 more)
.streamlit/: config.toml  deploy.toml  manifest.json  secrets.toml.example  sw.js
.trunk/: trunk.yaml
app_config/: __init__.py  settings.py
database/: __init__.py  db_manager.py
models/: __init__.py  schemas.py
plugins/: __init__.py  _base.py
prompts/: system_prompts.py
services/: __init__.py  auth.py  auth_privacy.py  barcode_scanner.py  copilot_router.py  crm_store.py  db.py  demo_seed.py  digital_twin.py  encryption.py  engine.py  export_service.py  graph_engine.py  health_sync.py  image_utils.py  inbox_engine.py  inbox_store.py  leads.py  live_vision.py  nutrition_api.py  rbac.py  (+11 more)
(+58 files in other folders)
